<resources>
    <string name="app_name">Minimalistic block puzzle</string>
    <string name="end_game_question">End game?</string>
    <string name="quit_question">Quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start">Start</string>
    <string name="best_score">Best score</string>
    <string name="result">Your score: %1$s</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="swipe">Swipe</string>
    <string name="button">Button</string>
    <string name="control">Control</string>

    <!-- Key -->
    <string name="best_score_key" translatable="false">best_score</string>
    <string name="shared_prefs_key" translatable="false">simple_tetris_shared_prefs</string>
</resources>